--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,16 @@ install:
   - pip3 install pytest
   - pip3 install .
 
-python:
-  - 3.5
-  - 3.6
-  - 3.7
-  - 3.8-dev
+matrix:
+ include:
+  -arch: amd64
+   python: 3.5
+  -arch: amd64
+    python: 3.6
+  -arch: amd64
+    python: 3.7
+  -arch: arm64
+    python: 3.8
 
 script:
   - pytest
