--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ install:
   - pip3 install pytest
   - pip3 install .
   
+arch:
+  - arm64
+  - amd64
+  
 python:
   - 3.5
   - 3.6
@@ -41,8 +45,17 @@ jobs:
       script:
         - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-linux-wheels.sh
         - ls wheelhouse/
-
-
+    - name: "manylinux arm64"
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
+           PRE_CMD=linux32
+           DEPLOY=1
+      install:
+        - docker pull $DOCKER_IMAGE
+        script:
+        - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-linux-wheels.sh
+        - ls wheelhouse/  
 
 # Upload build artifacts to Google Cloud Storage for tagged releases.
 # For GCS deployment documentation, see: https://docs.travis-ci.com/user/deployment/gcs/
