--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ script:
 jobs:
   include:
     - name: "manylinux x86-64"
+      arch: amd64
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
@@ -35,6 +36,7 @@ jobs:
         - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-linux-wheels.sh
         - ls wheelhouse/
     - name: "manylinux i686"
+      arch: i686
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux1_i686
@@ -45,7 +47,8 @@ jobs:
       script:
         - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-linux-wheels.sh
         - ls wheelhouse/
-    - name: "manylinux arm64"
+    - name: "manylinux aarch64"
+      arch: arm64
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
