--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
   - pip3 install .
   
 arch:
-  - arm64
   - amd64
+  - arm64
   
 python:
   - 3.5
@@ -46,6 +46,7 @@ jobs:
         - docker run --rm -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/.travis/build-linux-wheels.sh
         - ls wheelhouse/
     - name: "manylinux aarch64"
+      arch: arm64
       services:
         - docker
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2014_aarch64
